--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Starkus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="hexes.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="main.js"></script>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Roboto+Condensed:400,700" rel="stylesheet"> 
@@ -14,13 +16,14 @@
 </head>
 <body>
     <div class="header">
-        <h1>Emiliano Senega</h1>
-        <h3>Master Learner</h3>
+        <div id="header-back" data-scroll-speed="6"></div>
+        <h1 data-scroll-speed="1">Emiliano Senega</h1>
+        <h3 data-scroll-speed="1">Master Learner</h3>
         <div id="main-navbar">
             <span>
                 <ul>
                     <li>Home</li>
-                    <li>About</li>
+                    <li>Gamedev</li>
                     <li>Resume</li>
                 </ul>
             </span>
@@ -30,7 +33,7 @@
                     <li><i class="fab fa-twitter"></i></li>
                     <li><i class="fab fa-facebook-f"></i></li>
                     <li><i class="fab fa-youtube"></i></li>
-                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-github"></i></li>
                 </ul>
             </span>
             <span class="separator"></span>
@@ -45,20 +48,22 @@
     </div>
     <div class="about">
         <span id="about-left">
-            <h1>Emiliano A. Senega</h1>
-            <h3>Developer / CS Student</h3>
-            <h2>I love to learn about programming</h2>
-            <p>
-                Been teaching myself programming for several years and I'm
-                looking for jobs to grow as a professional.
-            </p>
+            <div>
+                <h1>Emiliano A. Senega</h1>
+                <h3>Developer / CS Student</h3>
+                <h2>I love to learn about programming</h2>
+                <p>
+                    Been teaching myself programming for several years and I'm
+                    looking for jobs to grow as a professional.
+                </p>
+            </div>
         </span>
         <span id="about-right">
             <span>
-                <img width="140" src="images/small-profile.png">
+                <img width="120" src="images/small-profile.png">
             </span>
             <span>
-                <ul>
+                <ul style="padding-left: 20px">
                     <li><strong>Birthdate:</strong> 1998-07-06</li>
                     <li><strong>Phone:</strong> +54 011 33551105</li>
                     <li><strong>Email:</strong> emilianoalejosenega@gmail.com</li>
@@ -68,42 +73,156 @@
             </span>
         </span>
     </div>
-    <div class="section">
-        <h1>My skills and expertise</h1>
-        <div class="little-divisor"></div>
-        <h2>I am a kid with a passion for Computer Science</h2>
-        <div class="skill-bars">
-            <h3>Graphic skills</h3>
-            <div class="skill-bar">
-                <p>Blender3D</p>
-                <span style="width: 100%" class="bar-fill"></span><span style="width: 0%" class="bar-back"></span>
+    <div class="section-back">
+        <div class="section" style="max-width: unset;">
+            <h1>Renders</h1>
+            <div class="little-divisor"></div>
+            <h2>I am a kid with a passion for Computer Science</h2>
+            <div class="hex-row">
+                <span class="hex-row-fill"></span>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-arch.jpg);"></div>
+                    </div>
+                </div>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2"></div>
+                    </div>
+                </div>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2"></div>
+                    </div>
+                </div>
+                <span class="hex-row-fill"></span>
             </div>
-            <div class="skill-bar">
-                <p>Photoshop</p>
-                <span style="width: 88%" class="bar-fill"></span><span style="width: 12%" class="bar-back"></span>
+            <div class="hex-row">
+                <span class="hex-row-fill"></span>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2"></div>
+                    </div>
+                </div>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-clio.jpg);"></div>
+                    </div>
+                </div>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-clio2.jpg);"></div>
+                    </div>
+                </div>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2"></div>
+                    </div>
+                </div>
+                <span class="hex-row-fill"></span>
             </div>
-            <div class="skill-bar">
-                <p>Illustrator</p>
-                <span style="width: 60%" class="bar-fill"></span><span style="width: 40%" class="bar-back"></span>
+            <div class="hex-row">
+                <span class="hex-row-fill"></span>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-xbow.png); background-color: indianred;"></div>
+                    </div>
+                </div>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-207.jpg);"></div>
+                    </div>
+                </div>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-huracan3.jpg);"></div>
+                    </div>
+                </div>
+                <span class="hex-row-fill"></span>
+            </div>
+            <div class="hex-row">
+                <span class="hex-row-fill"></span>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-huracan4.jpg);"></div>
+                    </div>
+                </div>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-huracan2.jpg);"></div>
+                    </div>
+                </div>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-huracan.jpg);"></div>
+                    </div>
+                </div>
+                <div class="hex">
+                    <div class="hex-1">
+                        <div class="hex-2"></div>
+                    </div>
+                </div>
+                <span class="hex-row-fill"></span>
             </div>
         </div>
-        <div class="skill-bars">
-            <h3>Programming skills</h3>
-            <div class="skill-bar">
-                <p>Object Oriented Programming</p>
-                <span style="width: 90%" class="bar-fill"></span><span style="width: 10%" class="bar-back"></span>
+        <div class="hex-row">
+            <span class="hex-row-fill"></span>
+            <div class="hex">
+                <div class="hex-1">
+                    <div class="hex-2" style="background-image: url(/images/thumbnail-countach2.jpg);"></div>
+                </div>
             </div>
-            <div class="skill-bar">
-                <p>Close to hardware and embedded</p>
-                <span style="width: 92%" class="bar-fill"></span><span style="width: 8%" class="bar-back"></span>
+            <div class="hex">
+                <div class="hex-1">
+                    <div class="hex-2" style="background-image: url(/images/thumbnail-countach.jpg);"></div>
+                </div>
             </div>
-            <div class="skill-bar">
-                <p>Algorithms</p>
-                <span style="width: 65%" class="bar-fill"></span><span style="width: 35%" class="bar-back"></span>
+            <div class="hex">
+                <div class="hex-1">
+                    <div class="hex-2" style="background-image: url(/images/thumbnail-guitar.jpg);"></div>
+                </div>
             </div>
-            <div class="skill-bar">
-                <p>Videogame development</p>
-                <span style="width: 88%" class="bar-fill"></span><span style="width: 12%" class="bar-back"></span>
+            <span class="hex-row-fill"></span>
+        </div>
+    </div>
+    <div class="section-back">
+        <div class="section">
+            <h1>My skills and expertise</h1>
+            <div class="little-divisor"></div>
+            <h2>I am a kid with a passion for Computer Science</h2>
+            <div class="skill-bars">
+                <h3>Graphic skills</h3>
+                <div class="skill-bar">
+                    <p>Blender3D</p>
+                    <span style="width: 100%" class="bar-fill"></span><span style="width: 0%" class="bar-back"></span>
+                </div>
+                <div class="skill-bar">
+                    <p>Photoshop</p>
+                    <span style="width: 88%" class="bar-fill"></span><span style="width: 12%" class="bar-back"></span>
+                </div>
+                <div class="skill-bar">
+                    <p>Illustrator</p>
+                    <span style="width: 60%" class="bar-fill"></span><span style="width: 40%" class="bar-back"></span>
+                </div>
+            </div>
+            <div class="skill-bars">
+                <h3>Programming skills</h3>
+                <div class="skill-bar">
+                    <p>Object Oriented Programming</p>
+                    <span style="width: 90%" class="bar-fill"></span><span style="width: 10%" class="bar-back"></span>
+                </div>
+                <div class="skill-bar">
+                    <p>Close to hardware and embedded</p>
+                    <span style="width: 92%" class="bar-fill"></span><span style="width: 8%" class="bar-back"></span>
+                </div>
+                <div class="skill-bar">
+                    <p>Algorithms</p>
+                    <span style="width: 65%" class="bar-fill"></span><span style="width: 35%" class="bar-back"></span>
+                </div>
+                <div class="skill-bar">
+                    <p>Videogame development</p>
+                    <span style="width: 88%" class="bar-fill"></span><span style="width: 12%" class="bar-back"></span>
+                </div>
             </div>
         </div>
     </div>
