Picture gallery works!

--- a/index.html
+++ b/index.html
@@ -75,25 +75,32 @@
         </span>
     </div>
     <div class="section-back">
-        <div class="section" id="renders" style="max-width: unset;">
+        <div class="section" id="gamedev" style="max-width: unset;">
+            <h1>Gamedev</h1>
+            <div class="little-divisor"></div>
+            <h2><i>Where the passion comes from</i></h2>
+        </div>
+    </div>
+    <div class="section-back alt1">
+        <div class="section alt1" id="renders" style="max-width: unset;">
             <h1>Renders</h1>
             <div class="little-divisor"></div>
             <h2><i>The section with pretty pictures</i></h2>
             <div class="hex-row">
                 <span class="hex-row-fill"></span>
-                <div class="hex">
+                <div class="hex" data-image="/images/arch.jpg">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(/images/thumbnail-arch.jpg);"></div>
                     </div>
                 </div>
                 <div class="hex">
                     <div class="hex-1">
-                        <div class="hex-2"></div>
+                        <div class="hex-2" style="background-color: palegoldenrod"></div>
                     </div>
                 </div>
                 <div class="hex">
                     <div class="hex-1">
-                        <div class="hex-2"></div>
+                        <div class="hex-2" style="background-color: lightgray;"></div>
                     </div>
                 </div>
                 <span class="hex-row-fill"></span>
@@ -102,39 +109,39 @@
                 <span class="hex-row-fill"></span>
                 <div class="hex">
                     <div class="hex-1">
-                        <div class="hex-2"></div>
+                        <div class="hex-2" style="background-color: lightseagreen"></div>
                     </div>
                 </div>
-                <div class="hex">
+                <div class="hex" data-image="/images/clio.png">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(/images/thumbnail-clio.jpg);"></div>
                     </div>
                 </div>
-                <div class="hex">
+                <div class="hex" data-image="/images/clio2.png">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(/images/thumbnail-clio2.jpg);"></div>
                     </div>
                 </div>
                 <div class="hex">
                     <div class="hex-1">
-                        <div class="hex-2"></div>
+                        <div class="hex-2" style="background-color: lightgray;"></div>
                     </div>
                 </div>
                 <span class="hex-row-fill"></span>
             </div>
             <div class="hex-row">
                 <span class="hex-row-fill"></span>
-                <div class="hex">
+                <div class="hex" data-image="/images/xbow.png">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-xbow.png); background-color: indianred;"></div>
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-xbow.png); background-color: lightseagreen;"></div>
                     </div>
                 </div>
-                <div class="hex">
+                <div class="hex" data-image="/images/207.jpg">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(/images/thumbnail-207.jpg);"></div>
                     </div>
                 </div>
-                <div class="hex">
+                <div class="hex" data-image="/images/huracan3.png">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(/images/thumbnail-huracan3.jpg);"></div>
                     </div>
@@ -143,48 +150,49 @@
             </div>
             <div class="hex-row">
                 <span class="hex-row-fill"></span>
-                <div class="hex">
+                <div class="hex" data-image="/images/huracan4.png">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(/images/thumbnail-huracan4.jpg);"></div>
                     </div>
                 </div>
-                <div class="hex">
+                <div class="hex" data-image="/images/huracan2.png">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(/images/thumbnail-huracan2.jpg);"></div>
                     </div>
                 </div>
-                <div class="hex">
+                <div class="hex" data-image="/images/huracan.png">
                     <div class="hex-1">
                         <div class="hex-2" style="background-image: url(/images/thumbnail-huracan.jpg);"></div>
                     </div>
                 </div>
                 <div class="hex">
                     <div class="hex-1">
-                        <div class="hex-2"></div>
+                        <div class="hex-2" style="background-color: lightseagreen"></div>
+                    </div>
+                </div>
+                <span class="hex-row-fill"></span>
+            </div>
+            <div class="hex-row">
+                <span class="hex-row-fill"></span>
+                <div class="hex" data-image="/images/countach2.png">
+                    <div class="hex-1">
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-countach2.jpg);"></div>
+                    </div>
+                </div>
+                <div class="hex" data-image="/images/countach.jpg">
+                    <div class="hex-1">
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-countach.jpg);"></div>
+                    </div>
+                </div>
+                <div class="hex" data-image="/images/guitar.jpg">
+                    <div class="hex-1">
+                        <div class="hex-2" style="background-image: url(/images/thumbnail-guitar.jpg);"></div>
                     </div>
                 </div>
                 <span class="hex-row-fill"></span>
             </div>
         </div>
-        <div class="hex-row">
-            <span class="hex-row-fill"></span>
-            <div class="hex">
-                <div class="hex-1">
-                    <div class="hex-2" style="background-image: url(/images/thumbnail-countach2.jpg);"></div>
-                </div>
-            </div>
-            <div class="hex">
-                <div class="hex-1">
-                    <div class="hex-2" style="background-image: url(/images/thumbnail-countach.jpg);"></div>
-                </div>
-            </div>
-            <div class="hex">
-                <div class="hex-1">
-                    <div class="hex-2" style="background-image: url(/images/thumbnail-guitar.jpg);"></div>
-                </div>
-            </div>
-            <span class="hex-row-fill"></span>
-        </div>
+        <br /><br />
     </div>
     <div class="section-back">
         <div class="section" id="resume">
@@ -208,19 +216,19 @@
             </div>
             <div class="skill-bars">
                 <h3>Programming skills</h3>
-                <div class="skill-bar">
+                <div class="skill-bar alt1">
                     <p>Object Oriented Programming</p>
                     <span style="width: 90%" class="bar-fill"></span><span style="width: 10%" class="bar-back"></span>
                 </div>
-                <div class="skill-bar">
+                <div class="skill-bar alt1">
                     <p>Close to hardware and embedded</p>
                     <span style="width: 92%" class="bar-fill"></span><span style="width: 8%" class="bar-back"></span>
                 </div>
-                <div class="skill-bar">
+                <div class="skill-bar alt1">
                     <p>Algorithms</p>
                     <span style="width: 65%" class="bar-fill"></span><span style="width: 35%" class="bar-back"></span>
                 </div>
-                <div class="skill-bar">
+                <div class="skill-bar alt1">
                     <p>Videogame development</p>
                     <span style="width: 88%" class="bar-fill"></span><span style="width: 12%" class="bar-back"></span>
                 </div>
