Images moved to imgur

--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
             <h2><i>The section with pretty pictures</i></h2>
             <div class="hex-row">
                 <span class="hex-row-fill"></span>
-                <div class="hex" data-image="/images/arch.jpg">
+                <!-- Office -->
+                <div class="hex" data-image="https://i.imgur.com/orsIHiI.jpg">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-arch.jpg);"></div>
+                        <div class="hex-2" style="background-image: url(https://i.imgur.com/JDDC01j.jpg);"></div>
                     </div>
                 </div>
                 <div class="hex">
@@ -112,14 +113,16 @@
                         <div class="hex-2" style="background-color: lightseagreen"></div>
                     </div>
                 </div>
-                <div class="hex" data-image="/images/clio.png">
+                <!-- Clio 1 -->
+                <div class="hex" data-image="https://i.imgur.com/SD7YvBs.png">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-clio.jpg);"></div>
+                        <div class="hex-2" style="background-image: url(https://i.imgur.com/YT2NikT.jpg);"></div>
                     </div>
                 </div>
-                <div class="hex" data-image="/images/clio2.png">
+                <!-- Clio 2 -->
+                <div class="hex" data-image="https://i.imgur.com/NwqQwWR.png">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-clio2.jpg);"></div>
+                        <div class="hex-2" style="background-image: url(https://i.imgur.com/YveZKNI.jpg);"></div>
                     </div>
                 </div>
                 <div class="hex">
@@ -131,38 +134,44 @@
             </div>
             <div class="hex-row">
                 <span class="hex-row-fill"></span>
-                <div class="hex" data-image="/images/xbow.png">
+                <!-- Crossbow -->
+                <div class="hex" data-image="https://i.imgur.com/kRBXRh2.png">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-xbow.png); background-color: lightseagreen;"></div>
+                        <div class="hex-2" style="background-image: url(https://i.imgur.com/QrEz6zQ.png); background-color: lightseagreen;"></div>
                     </div>
                 </div>
-                <div class="hex" data-image="/images/207.jpg">
+                <!-- 207cc -->
+                <div class="hex" data-image="https://i.imgur.com/jwCKuCW.jpg">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-207.jpg);"></div>
+                        <div class="hex-2" style="background-image: url(https://i.imgur.com/AYgrB9l.jpg);"></div>
                     </div>
                 </div>
-                <div class="hex" data-image="/images/huracan3.png">
+                <!-- Huracan 3 -->
+                <div class="hex" data-image="https://i.imgur.com/Y1BIAes.png">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-huracan3.jpg);"></div>
+                        <div class="hex-2" style="background-image: url(https://i.imgur.com/vLe603k.jpg);"></div>
                     </div>
                 </div>
                 <span class="hex-row-fill"></span>
             </div>
             <div class="hex-row">
                 <span class="hex-row-fill"></span>
-                <div class="hex" data-image="/images/huracan4.png">
+                <!-- Huracan 4 -->
+                <div class="hex" data-image="https://i.imgur.com/9m1BxzZ.png">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-huracan4.jpg);"></div>
+                        <div class="hex-2" style="background-image: url(https://i.imgur.com/W6Eh3LV.jpg);"></div>
                     </div>
                 </div>
-                <div class="hex" data-image="/images/huracan2.png">
+                <!-- Huracan 2 -->
+                <div class="hex" data-image="https://i.imgur.com/42LCwjF.png">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-huracan2.jpg);"></div>
+                        <div class="hex-2" style="background-image: url(https://i.imgur.com/cacME2t.jpg);"></div>
                     </div>
                 </div>
-                <div class="hex" data-image="/images/huracan.png">
+                <!-- Huracan 1 -->
+                <div class="hex" data-image="https://i.imgur.com/I8ciSve.png">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-huracan.jpg);"></div>
+                        <div class="hex-2" style="background-image: url(https://i.imgur.com/imYMkbd.jpg);"></div>
                     </div>
                 </div>
                 <div class="hex">
@@ -174,19 +183,22 @@
             </div>
             <div class="hex-row">
                 <span class="hex-row-fill"></span>
-                <div class="hex" data-image="/images/countach2.png">
+                <!-- Countach 2 -->
+                <div class="hex" data-image="https://i.imgur.com/aR4m89X.png">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-countach2.jpg);"></div>
+                        <div class="hex-2" style="background-image: url(https://i.imgur.com/OZZJ01G.jpg);"></div>
                     </div>
                 </div>
-                <div class="hex" data-image="/images/countach.jpg">
+                <!-- Countach 1 -->
+                <div class="hex" data-image="https://i.imgur.com/H8Fo2AQ.jpg">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-countach.jpg);"></div>
+                        <div class="hex-2" style="background-image: url(https://i.imgur.com/XjoO3Bf.jpg);"></div>
                     </div>
                 </div>
-                <div class="hex" data-image="/images/guitar.jpg">
+                <!-- Guitar -->
+                <div class="hex" data-image="https://i.imgur.com/MVR4hut.jpg">
                     <div class="hex-1">
-                        <div class="hex-2" style="background-image: url(/images/thumbnail-guitar.jpg);"></div>
+                        <div class="hex-2" style="background-image: url(https://i.imgur.com/OW9B8L4.jpg);"></div>
                     </div>
                 </div>
                 <span class="hex-row-fill"></span>
