Should look ok in mobile now

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Starkus</title>
+    <title>Emiliano Senega</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="hexes.css" />
@@ -18,8 +18,8 @@
 <body>
     <div class="header">
         <div id="header-back" data-scroll-speed="6"></div>
-        <h1 data-scroll-speed="1">Emiliano Senega</h1>
-        <h3 data-scroll-speed="1">Master Learner</h3>
+        <h1>Emiliano Senega</h1>
+        <h3>Master Learner</h3>
         <div id="main-navbar">
             <span>
                 <ul>
@@ -31,10 +31,10 @@
             <span class="separator"></span>
             <span>
                 <ul>
-                    <li><i class="fab fa-twitter"></i></li>
-                    <li><i class="fab fa-facebook-f"></i></li>
-                    <li><i class="fab fa-youtube"></i></li>
-                    <li><i class="fab fa-github"></i></li>
+                    <li class="hide-mobile"><i class="fab fa-twitter"></i></li>
+                    <li class="hide-mobile"><i class="fab fa-facebook-f"></i></li>
+                    <li class="hide-mobile"><i class="fab fa-youtube"></i></li>
+                    <li class="hide-mobile"><i class="fab fa-github"></i></li>
                 </ul>
             </span>
             <span class="separator"></span>
@@ -64,7 +64,7 @@
                 <img width="120" src="images/small-profile.png">
             </span>
             <span>
-                <ul style="padding-left: 20px">
+                <ul>
                     <li><strong>Birthdate:</strong> 1998-07-06</li>
                     <li><strong>Phone:</strong> +54 011 33551105</li>
                     <li><strong>Email:</strong> emilianoalejosenega@gmail.com</li>
@@ -82,12 +82,13 @@
         </div>
     </div>
     <div class="section-back alt1">
-        <div class="section alt1" id="renders" style="max-width: unset;">
+        <div class="section alt1" id="renders" style="max-width: unset; padding-left: 0; padding-right: 0;">
             <h1>Renders</h1>
             <div class="little-divisor"></div>
             <h2><i>The section with pretty pictures</i></h2>
             <div class="hex-row">
                 <span class="hex-row-fill"></span>
+                <span class="half-hex"></span>
                 <!-- Office -->
                 <div class="hex" data-image="https://i.imgur.com/orsIHiI.jpg">
                     <div class="hex-1">
@@ -104,6 +105,7 @@
                         <div class="hex-2" style="background-color: lightgray;"></div>
                     </div>
                 </div>
+                <span class="half-hex"></span>
                 <span class="hex-row-fill"></span>
             </div>
             <div class="hex-row">
@@ -134,6 +136,7 @@
             </div>
             <div class="hex-row">
                 <span class="hex-row-fill"></span>
+                <div class="half-hex"></div>
                 <!-- Crossbow -->
                 <div class="hex" data-image="https://i.imgur.com/kRBXRh2.png">
                     <div class="hex-1">
@@ -152,6 +155,7 @@
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/vLe603k.jpg);"></div>
                     </div>
                 </div>
+                <div class="half-hex"></div>
                 <span class="hex-row-fill"></span>
             </div>
             <div class="hex-row">
@@ -183,6 +187,7 @@
             </div>
             <div class="hex-row">
                 <span class="hex-row-fill"></span>
+                <div class="half-hex"></div>
                 <!-- Countach 2 -->
                 <div class="hex" data-image="https://i.imgur.com/aR4m89X.png">
                     <div class="hex-1">
@@ -201,6 +206,7 @@
                         <div class="hex-2" style="background-image: url(https://i.imgur.com/OW9B8L4.jpg);"></div>
                     </div>
                 </div>
+                <div class="half-hex"></div>
                 <span class="hex-row-fill"></span>
             </div>
         </div>
@@ -245,6 +251,19 @@
                     <span style="width: 88%" class="bar-fill"></span><span style="width: 12%" class="bar-back"></span>
                 </div>
             </div>
+        </div>
+    </div>
+    <div id="footer">
+        <div style="background-color: rgba(255, 255, 255, 0.03);">
+            <ul>
+                <li><i class="fab fa-twitter"></i></li>
+                <li><i class="fab fa-facebook-f"></i></li>
+                <li><i class="fab fa-youtube"></i></li>
+                <li><i class="fab fa-github"></i></li>
+            </ul>
+        </div>
+        <div>
+            © 2018 <strong>Emiliano A. Senega</strong> All Rights Reserved.
         </div>
     </div>
     <!-- Picture Modal -->
