Fixed desktop navbar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="main-navbar desktop">
             <span>
                 <ul>
-                    <li>Home</li>
+                    <li><a>Home</a></li>
                     <li><a onclick="document.getElementById('gamedev').scrollIntoView({behavior: 'smooth'});">Gamedev</a></li>
                     <li><a onclick="document.getElementById('renders').scrollIntoView({behavior: 'smooth'});">Renders</a></li>
                 </ul>
@@ -31,18 +31,18 @@
             <span class="separator"></span>
             <span>
                 <ul class="hide-mobile">
-                    <li><i class="fab fa-twitter"></i></li>
-                    <li><i class="fab fa-facebook-f"></i></li>
-                    <li><i class="fab fa-youtube"></i></li>
-                    <li><i class="fab fa-github"></i></li>
+                    <li><a><i class="fab fa-twitter"></i></a></li>
+                    <li><a><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCnmMGOVv-UHsrAi9fQPIDag?disable_polymer=true"><i class="fab fa-youtube"></i></a></li>
+                    <li><a><i class="fab fa-github"></i></a></li>
                 </ul>
             </span>
             <span class="separator"></span>
             <span>
                 <ul>
                     <li class="li-right"><a onclick="document.getElementById('resume').scrollIntoView({behavior: 'smooth'});">Resume</a></li>
-                    <li class="li-right">Blog</li>
-                    <li class="li-right">Contact</li>
+                    <li class="li-right"><a>Blog</a></li>
+                    <li class="li-right"><a>Contact</a></li>
                 </ul>
             </span>
         </div>
@@ -90,6 +90,13 @@
             <h1>Gamedev</h1>
             <div class="little-divisor"></div>
             <h2><i>Where the passion comes from</i></h2>
+            <h3>Unity3D</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/6Jn-br51BlU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Nx2gvoYmHGU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <h3>Blender Game Engine</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/hTHIwNxr-bU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <h3>Pure Java and OpenGL</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/hSC8ZCLypdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </div>
     <div class="section-back alt1">
