More responsive embedded videos

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
             <div class="little-divisor"></div>
             <h2><i>Where the passion comes from</i></h2>
             <h3>Unity3D</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/6Jn-br51BlU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Nx2gvoYmHGU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/6Jn-br51BlU?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Nx2gvoYmHGU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             <h3>Blender Game Engine</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/hTHIwNxr-bU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/hTHIwNxr-bU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             <h3>Pure Java and OpenGL</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/hSC8ZCLypdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/hSC8ZCLypdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </div>
     <div class="section-back alt1">
